Переделан проект. Ранее в качестве СУБД использзовалась MSSQL, теперь же используется MySQL

--- a/MySite/Views/Profile/Edit.cshtml
+++ b/MySite/Views/Profile/Edit.cshtml
@@ -20,19 +20,19 @@
         <table>
             <tr>
                 <td>Имя &nbsp;&nbsp;&nbsp;</td>
-                <td>@Html.EditorFor(x => x.Name)</td>
+                <td>@Html.EditorFor(x => x.NAME)</td>
             </tr>
             <tr>
                 <td>Фамилия &nbsp;&nbsp;&nbsp;</td>
-                <td>@Html.EditorFor(x => x.Surname)</td>
+                <td>@Html.EditorFor(x => x.SURNAME)</td>
             </tr>
             <tr>
                 <td>Дата рождения &nbsp;&nbsp;&nbsp;</td>
-                <td>@Html.EditorFor(x => x.DateBirthDay)</td>
+                <td>@Html.EditorFor(x => x.DATEBIRTHDAY)</td>
             </tr>
             <tr>
                 <td>О себе &nbsp;&nbsp;&nbsp;</td>
-                <td>@Html.EditorFor(x => x.AboutOneself)</td>
+                <td>@Html.EditorFor(x => x.ABOUTONESELF)</td>
             </tr>
             <tr>
                 <td colspan="2">
